--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "libvcx"
-version = "0.1.2097319"
+version = "0.2.0"
 authors = [ "Evernym Inc." ]
 publish = false
 description = "This is the official SDK for Evernym's VCX"
@@ -18,6 +18,8 @@ pool_tests = []
 nullpay = []
 sovtoken = []
 agency = []
+# Causes the build to fail on all warnings
+#fatal_warnings = []
 
 # turn on release versioning
 ci = []
@@ -27,6 +29,7 @@ env_logger = "0.5.10"
 log = "0.4"
 log4rs = "0.8.0"
 chrono = "0.4"
+time = "0.1.36"
 lazy_static = "0.2"
 libc = "=0.2.41"
 rand = "0.3"
@@ -35,7 +38,7 @@ serde_json = "1.0"
 json = "*"
 serde_derive = "1.0"
 url = "1.5.1"
-reqwest = "0.8.5"
+reqwest = "0.9.5"
 rust-base58 = "0.0.4"
 rmpv = "0.4.0"
 rmp = "0.8"
@@ -43,10 +46,12 @@ rmp-serde = "0.13.7"
 base64 = "0.8.0"
 openssl = "0.10"
 num-traits = "0.2.0"
-indy = "1.6.8"
+indy = { version = "1.7.0", path = "../../wrappers/rust/" }
+indy-sys = { version = "1.7.0", path = "../../wrappers/rust/indy-sys/" }
 log-panics = "2.0.0"
 tokio-threadpool = "0.1.6"
 futures = "0.1.23"
+libloading = "0.5.0"
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.5"
@@ -60,11 +65,12 @@ serde_derive = "1.0"
 
 [dev-dependencies]
 tempfile = "2.2"
+dirs = "1.0.4"
 
 [package.metadata.deb]
 maintainer = "Evernym, Inc."
 copyright = "2018, Evernym Inc."
-depends = "$auto, libindy (=1.6.8), libsovtoken (=0.9.6)"
+depends = "$auto, libindy (=1.7.0), libsovtoken (=0.9.6)"
 extended-description = """\
 This is Evernym's SDK for managing Verifiable Credential eXchange against an Indy network. For specific instructions on building see the README in the corresponding github repo https://github.com/evernym/sdk"""
 section = "admin"
